--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,19 +1,32 @@
 {
-    "Lua.diagnostics.globals": [
-        "ARENA",
-        "RAID_FRAMES_LABEL",
-        "TargetFrameMixin",
-        "FOCUS",
-        "FocusFrame",
-        "UNIT_NAMEPLATES",
-        "SlashCmdList",
-        "VIDEO_OPTIONS_ENABLED",
-        "PARTY_MEMBERS",
-        "PLAYER",
-        "PlayerFrame",
-        "TARGET",
-        "TargetFrame",
-        "SHOW_TARGET_OF_TARGET_TEXT",
-        "TargetFrameToT"
-    ]
+	"Lua.diagnostics.globals": [
+		"ARENA",
+		"RAID_FRAMES_LABEL",
+		"TargetFrameMixin",
+		"FOCUS",
+		"FocusFrame",
+		"UNIT_NAMEPLATES",
+		"SlashCmdList",
+		"VIDEO_OPTIONS_ENABLED",
+		"PARTY_MEMBERS",
+		"PLAYER",
+		"PlayerFrame",
+		"TARGET",
+		"TargetFrame",
+		"SHOW_TARGET_OF_TARGET_TEXT",
+		"TargetFrameToT"
+	],
+	"Lua.runtime.version": "Lua 5.1",
+	"Lua.runtime.builtin": {
+		"basic": "disable",
+		"debug": "disable",
+		"io": "disable",
+		"math": "disable",
+		"os": "disable",
+		"package": "disable",
+		"string": "disable",
+		"table": "disable",
+		"utf8": "disable"
+	},
+	"Lua.workspace.library": ["~/.vscode-server/extensions/ketho.wow-api-0.16.8/Annotations"]
 }
