--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,7 +14,8 @@
 		"TARGET",
 		"TargetFrame",
 		"SHOW_TARGET_OF_TARGET_TEXT",
-		"TargetFrameToT"
+		"TargetFrameToT",
+		"Mixin"
 	],
 	"Lua.runtime.version": "Lua 5.1",
 	"Lua.runtime.builtin": {
@@ -28,5 +29,7 @@
 		"table": "disable",
 		"utf8": "disable"
 	},
-	"Lua.workspace.library": ["~/.vscode-server/extensions/ketho.wow-api-0.16.8/Annotations"]
+	"Lua.workspace.library": [
+		"~/.vscode-server/extensions/ketho.wow-api-0.17.5/Annotations"
+	]
 }
